# H2plus

./: .gitattributes  .gitignore  PROJECT_MEMORY.md  pyproject.toml
config/: plc.yaml  robot.real.yaml  robot.sim_mujoco.yaml  robot.yaml  stations.yaml
config/poses/: inductor_pick.yaml  inductor_place.yaml  inductor_screw_1.yaml  inductor_screw_2.yaml  load_workpiece.yaml  unload_workpiece.yaml
docs/: locomotion_roadmap.md  plc_interface.md  safety_concept.md  sdk_reference.md  source_plan.md
docs/adr/: 0001-python-sdk-statt-ros2.md  0002-pneumatikgreifer-und-ventil-port.md  0005-sicherheitskonzept.md  0006-schritt-ebene-auf-udt.md  0007-groot-policy-backend-zielarchitektur.md  0008-rl-policy-locomotion-backend.md
docs/unitree_docs/: Unitree_H2_Zusammenfassung.md
docs/versions/v0.1.1/: PROJECT_MEMORY.md  SNAPSHOT.md  pyproject.toml
docs/versions/v0.1.1/config/: plc.yaml
docs/versions/v0.1.1/src/h2_loader/: __init__.py
docs/versions/v0.1.1/src/h2_loader/plc/: handshake.py
docs/versions/v0.1.1/tests/: test_plc_interface.py
docs/versions/v0.1.1/tia/udt/: H2_Interface_UDTs.scl
groot/: README.md
scripts/: enable_ssh_sudo.sh  patch_unitree_mujoco_h2.sh  setup_vnc_viewer.sh
src/h2_loader/: __init__.py  app.py  bringup.py
tests/: conftest.py  test_bringup.py  test_change_inductor.py  test_hal.py  test_hardware_smoke.py  test_job_runner.py  test_machine_io.py  test_motion.py  test_policy.py  test_safety.py  test_skills.py
tia/: README.md
training/: README.md
training/deploy/: dds_hold_h2.py  dds_twin_headless.py  deploy_h2_g1policy.py  (+3 more)
(+237 files in other folders)
